	* moz#430900 phone is dereferenced before oom check
	* moz#418348 ckey_utf alloc is used unchecked in SuggestMgr::badcharkey_utf
	* CID#1487 pointer "rl" dereferenced before NULL check
	* CID#1464 Returned without freeing storage "ptr"
	* CID#1459 Avoid duplicate strchr
	* CID#1443 Avoid any chance of dereferencing *slst
	* CID#1442 Unsafe to have a null morph
	* CID#1440 Avoid null filenames

2010-04-16 Caolán McNamara <cmc at OOo>:
	* hun#2344123 fix U)ncap in utf-8 locale
	* fix up hunspell text UI and lines wider than terminal

2010-04-15 Caolán McNamara <cmc at OOo>:
	* hun#2613701 fix small leak in FileMgr::FileMgr
	* fix small leak in tools/hunspell
	* hun#2871300 avoid crash if def and words are NULL
	* hun#2904479 fix length of hzip file
	* hun#2986756 mingw build fix
	* hun#2986756 fix double-free
	* hun#2059896 fix crash in interactive mode without nls
	* hun#2917914 add some extra words to the latexparser
	* make some structs static
	* C-api has duped symbol names
	* regenerate gettext/intl with recent version
	* hun#2796772 build a .dll under MinGW
	* rhbz#502387 allow cross-compiling for MinGW target
	* hun#2467643 update .vcproj files to include replist.?xx
	* unify visiblity/dll_export support across platforms
	* hun#2831289 sizeof(short) typo
	* hun#2986756 add -u3 gcc style output

2010-04-14 Caolán McNamara <cmc at OOo>:
	* hun#2813804 fix segfault on hu_HU stemming

2010-04-13 Caolán McNamara <cmc at OOo>:
	* hun#2806689 fix ironic misspellings
	* hun#2836240 add Italian translations

2010-04-09 Caolán McNamara <cmc at OOo>:
	* fix titchy possible leak in command-line spellchecker

2010-04-07 Caolán McNamara <cmc at OOo>:
	* hun#2973827 apply win64 patch
	* hun#2005643 fix broken mystrdup

2010-03-04 Caolán McNamara <cmc at OOo>:
	* ooo#107768 fix crash in long strings in spellml mode
	* hun#1999737 add some malloc checks
	* hun#1999769 drop old buffer on realloc failure
	* hun#2005643 tidy string functions
	* hun#2005643 micro-opt